<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddActivity">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_blue_color"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/camera"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_blue_color"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/gallery"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_desc_story"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="top|left"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/location_switch"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/desc_edit_text_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_blue_color"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/upload"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_switch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>